--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <div class="video-box">
     <video controls autoplay muted playsinline controlslist="nofullscreen nodownload noremoteplayback" disablepictureinpicture preload="metadata">
-        <source src="https://cdn.videy.co/7d9d22865.mp4" type="video/mp4">
+        <source src="https://cdn.aceimg.com/7d9d22865.mp4" type="video/mp4">
     </video>
 </div>
 
